[package]
name = "dgram-ping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.31"
pnet_packet = "0.31.0"

[dependencies.tokio]
version = "1.19.2"
features = [
    "io-util",
    "net",
    "macros",
]

[dependencies.socket2]
version = "0.4.4"
features = [
    "all",
]

[dev-dependencies]
anyhow = "1.0.58"

[dev-dependencies.tokio]
version = "1.19.2"
features = [
    "rt",
    "time",
]
